Fix Facebook flyout overflow & popover arrow color

--- a/app/assets/stylesheets/bootstrap-theme.css
+++ b/app/assets/stylesheets/bootstrap-theme.css
@@ -4074,7 +4074,7 @@ input[type="submit"].btn.btn-mini {
   left: 50%;
   margin-left: -10px;
   border-width: 10px 10px 0;
-  border-top-color: white;
+  border-top-color: #333;
 }
 .popover.top .arrow:after {
   border-width: 11px 11px 0;
@@ -4087,7 +4087,7 @@ input[type="submit"].btn.btn-mini {
   left: -10px;
   margin-top: -10px;
   border-width: 10px 10px 10px 0;
-  border-right-color: white;
+  border-right-color: #333;
 }
 .popover.right .arrow:after {
   border-width: 11px 11px 11px 0;
@@ -4100,7 +4100,7 @@ input[type="submit"].btn.btn-mini {
   left: 50%;
   margin-left: -10px;
   border-width: 0 10px 10px;
-  border-bottom-color: white;
+  border-bottom-color: #333;
 }
 .popover.bottom .arrow:after {
   border-width: 0 11px 11px;
@@ -4113,7 +4113,7 @@ input[type="submit"].btn.btn-mini {
   right: -10px;
   margin-top: -10px;
   border-width: 10px 0 10px 10px;
-  border-left-color: white;
+  border-left-color: #333;
 }
 .popover.left .arrow:after {
   border-width: 11px 0 11px 11px;
