--- a/app/assets/stylesheets/custom.css.sass
+++ b/app/assets/stylesheets/custom.css.sass
@@ -1641,7 +1641,8 @@ input[type="radio"], input[type="checkbox"]
     height: 20px
     margin-right: -30px
     display: inline-block
-    overflow: hidden
+    .fb_iframe_widget
+      top: -2px
   #total-price
     margin-left: -3px
 
